Adding middleware and update documents
